фреймворк переработан под курсовик с Cucumber test одного сайта

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,6 +1,4 @@
-base_url=https://www.saucedemo.com/
-standard_login=standard_user
-password=secret_sauce
+base_url=https://mine-todos.netlify.app/
 browser=chrome
 headless=false
 maximize=true
